# resterrs

./: .gitignore  Cargo.toml  flake.nix  readme.md
.github/workflows/: test.yml  trunk-format.yml
nix/: shell.nix  treefmt.nix
nix/resterrs/: default.nix
nix/resterrs/nixosModules/: default.nix
nix/resterrs/pkgs/: resterrs.nix
src/: app.rs  cli.rs  command_runner.rs  common.rs  config.rs  lib.rs  logs.rs  main.rs  power_state_change_manager.rs  power_state_tracker.rs  udev_power_monitor.rs
src/handlers/: app_power_state_change_handler.rs  commands_power_state_change_handler.rs  mod.rs  systemd_power_state_change_handler.rs
src/systemd/: mod.rs  system_service_manager.rs  systemd_service_manager.rs
src/traits/: mod.rs  power_state_change_handler.rs  service_manager.rs
systemd/: resterrs.service
tests/: mod.rs  power_state_tracker.rs
tests/common/: mocks.rs  mod.rs  test_process.rs
tests/handlers/: app_handler.rs  commands_handler.rs  mod.rs  systemd_handler.rs
